--- a/package.json
+++ b/package.json
@@ -20,30 +20,31 @@
   ],
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "^3.0.1",
+    "core-js": "^3.3.3",
     "debug": "^3.1.0",
-    "flickity": "^2.0.10",
+    "flickity": "^2.2.1",
     "flickity-imagesloaded": "^2.0.0",
     "jquery": "^3.4.1",
     "normalize.css": "^7.0.0",
     "pretty-error": "^2.1.1",
     "smoothscroll-polyfill": "^0.4.0",
     "tailwindcss": "^1.1.2",
-    "what-input": "^5.0.4",
+    "what-input": "^5.2.6",
     "xml-js": "^1.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "babel-loader": "^8.0.0-beta.0",
     "browser-sync": "^2.23.5",
     "browser-sync-webpack-plugin": "^1.2.0",
     "clean-webpack-plugin": "^0.1.17",
-    "cross-env": "^5.2.0",
-    "css-loader": "^0.28.8",
+    "cross-env": "^5.2.1",
+    "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.18.2",
     "extract-loader": "^1.0.2",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.4",
@@ -53,10 +54,10 @@
     "postcss-import": "^11.0.0",
     "postcss-inline-svg": "^3.0.0",
     "postcss-loader": "^2.0.10",
-    "postcss-mixins": "^6.2.0",
-    "stylelint": "^8.4.0",
+    "postcss-mixins": "^6.2.2",
+    "stylelint": "^11.1.1",
     "stylelint-config-standard": "^18.0.0",
-    "svgo": "^1.0.3",
+    "svgo": "^1.3.0",
     "webpack": "^3.10.0"
   }
 }
